--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>[Your Style Title] by [Your Name] | Style Stage</title>
     <meta name="description" content="[Your optional description]" />
-    <link href="style.css" rel="stylesheet" />
+    <link href="/stylestage_sass/sass/style.css" rel="stylesheet" />
   </head>
   <body>
     <a href="#main" class="skip-link">Skip to main content</a>
@@ -60,10 +60,11 @@
               CSS-based design" until submissions stopped in 2013.
             </p>
             <p>
-              <strong>Style Stage</strong> seeks to rekindle that spirit by
+              Style Stage seeks to rekindle that spirit by
               providing this page as the base HTML for contributors - like you!
               - to re-style by submitting an alternate stylesheet.
             </p>
+            <hr>
             <blockquote>
               <p>
                 <strong>How it works:</strong> Visit the
@@ -74,6 +75,7 @@
                 <a href="#contribute">submit a stylesheet</a>!
               </p>
             </blockquote>
+            <hr>
             <p>
               The HTML for this page was created to be semantic, accessible, and
               free of nearly all other opinions. Nested sectioning elements with
@@ -92,7 +94,7 @@
               most high-touch features.
             </p>
             <p>Some examples of modern CSS include:</p>
-            <ul>
+            <ul class="css">
               <li>Flexbox</li>
               <li>Grid</li>
               <li>custom variables</li>
@@ -164,6 +166,7 @@
         </article>
         <article id="contribute">
           <section class="container">
+            <hr>
             <h2>Contribute</h2>
             <p>
               All who enjoy the craft of writing CSS are welcome to contribute!
@@ -178,6 +181,8 @@
           <section class="container">
             <h3>Steps to Contribute</h3>
             <ol>
+              <div class="li">
+              <p class="numbers">1</p>
               <li>
                 Download the source files listed below to use as a reference to
                 build your stylesheet, or start from the
@@ -185,10 +190,16 @@
                   >Sass template</a
                 >.
               </li>
+              </div>
+              <div class="li">
+              <p class="numbers">2</p>
               <li>
                 Host your completed stylesheet at a public URL, and ensure all
                 asset links are absolute URLs to external resources.
               </li>
+              </div>
+              <div class="li">
+                <p class="numbers">3 </p>
               <li>
                 <a href="https://github.com/5t3ph/stylestage"
                   >Create a pull request</a
@@ -200,11 +211,16 @@
                   >creating a pull request</a
                 >.
               </li>
+              </div>
+              <div class="li">
+                <p class="numbers">4</p>
               <li>
                 If your contribution abides by the previously listed guidelines,
                 your submission will be added!
               </li>
+              </div>
             </ol>
+            <hr>
           </section>
           <footer id="files">
             <div class="container">
